--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -35,7 +35,7 @@ body {
   color: #fff;
   border: none;
   padding: 10px 20px;
-  margin: 5px;
+  margin: 5px 0px;
   border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
@@ -96,8 +96,7 @@ body {
 .form-control input {
   width: 100%;
   height: 40px;
-  margin: 5px;
-  padding: 3px 7px;
+  margin-top: 5px;
   font-size: 17px;
 }
 
