--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -13,13 +13,11 @@ body {
 }
 
 .container {
-  max-width: 500px;
+  max-width: 1800px;
+  width: 90%;
   margin: 30px auto;
   overflow: auto;
-  min-height: 300px;
-  border: 1px solid steelblue;
-  padding: 30px;
-  border-radius: 5px;
+  padding: 0px 15px;
 }
 
 .header {
@@ -81,6 +79,7 @@ body {
   display: inline-block;
   margin-bottom: 40px;
   width: 70%;
+  max-width: 750px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -143,6 +142,7 @@ a {
 
 .login-register-form {
   width: 60%;
+  max-width: 700px;
   margin: auto;
   height: 100%;
   padding-top: 100px;
