--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<div>
+  <app-error-view></app-error-view>
   <app-header></app-header>
-  <app-tasks></app-tasks>
+  <router-outlet></router-outlet>
+  <!-- <app-tasks></app-tasks> -->
 </div>
