--- a/Angular/src/app/components/header/header.component.html
+++ b/Angular/src/app/components/header/header.component.html
@@ -1,9 +1,16 @@
 <header>
-  <h1>{{ title }}</h1>
-
-  <app-button
-    color="{{ showAddTask ? 'red' : 'green' }}"
-    text="{{ showAddTask ? 'Close' : 'Add' }}"
-    (btnClick)="toggleAddTask()"
-  ></app-button>
+  <h1 (click)="redirectToHome()">{{ title }}</h1>
+  <div class="btn-container">
+    <app-button
+      color="{{ showAddTask ? 'red' : 'green' }}"
+      text="{{ showAddTask ? 'Close' : 'Add' }}"
+      (btnClick)="toggleAddTask()"
+    ></app-button>
+    <app-button
+      color="#00ccff"
+      text="logout"
+      (btnClick)="onLogoutClick()"
+      [ngStyle]="{ 'margin-left': '20px' }"
+    ></app-button>
+  </div>
 </header>
